# docs/swagger.json
@@ -26,7 +26,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterTenantRequest"
+                            "$ref": "#/definitions/register.RegisterTenantRequest"
                         }
                     }
                 ],
@@ -34,19 +34,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterTenantResponse"
+                            "$ref": "#/definitions/register.RegisterTenantResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid request payload",
                         "schema": {
-                            "$ref": "#/definitions/middleware.CustomError"
+                            "$ref": "#/definitions/custom_errors.CustomError"
                         }
                     },
                     "422": {
                         "description": "Failed to register tenant",
                         "schema": {
-                            "$ref": "#/definitions/middleware.CustomError"
+                            "$ref": "#/definitions/custom_errors.CustomError"
                         }
                     }
                 }
@@ -54,7 +54,24 @@
         }
     },
     "definitions": {
-        "dto.Account": {
+        "custom_errors.CustomError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "details": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "register.RegisterTenantAccountRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -78,7 +95,7 @@
                 }
             }
         },
-        "dto.RegisterTenantRequest": {
+        "register.RegisterTenantRequest": {
             "description": "Tenant registration request body",
             "type": "object",
             "required": [
@@ -92,7 +109,7 @@
                     "description": "Admin user details",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/dto.Account"
+                            "$ref": "#/definitions/register.RegisterTenantAccountRequest"
                         }
                     ]
                 },
@@ -134,7 +151,7 @@
                 }
             }
         },
-        "dto.RegisterTenantResponse": {
+        "register.RegisterTenantResponse": {
             "type": "object",
             "properties": {
                 "address": {
@@ -165,26 +182,6 @@
                     "type": "string"
                 },
                 "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "middleware.CustomError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "description": "Custom error code",
-                    "type": "string"
-                },
-                "details": {
-                    "description": "Additional details",
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "message": {
-                    "description": "Human-readable message",
                     "type": "string"
                 }
             }
